feat: send emails correctly :tada:

--- a/templates/password-reset.pug
+++ b/templates/password-reset.pug
@@ -16,18 +16,13 @@ append style
 
 block head
     h2.welcome.
-        Welcome #{username} !
+        Password reset
 
 block content
     row
         column(style={ 'padding': '10px 20px' })
             p
-                | Thank you for your registration on
-                |
-                span(style={ 'font-weight': 'bold' }) Meet a Celebrity
-                |.
-            p.
-                Let's talk with your favorite celebrities such as Brad Pitt or François Hollande !
+                | Follow the link to reset your password
     row
         column(style={ 'padding-bottom': '20px' })
-            button.confirm-button(href=signup_url) Go on
+            button.confirm-button(href=reset_password_link) Reset my password
