--- a/templates/_layout.pug
+++ b/templates/_layout.pug
@@ -1,10 +1,11 @@
 heml
     head
-        font(href="https://fonts.googleapis.com/css?family=Roboto:400,500|Saira:700&display=swap")
         block style
             style.
+                * {
+                    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+                }
                 body {
-                    font-family: 'Roboto', serif;
                     padding-top: 30px;
                     background: #EDF2F7;
                     line-height: 1.5rem
@@ -29,8 +30,8 @@ heml
             row
                 column
                     h1(style={ 'margin-top': 0, 'text-align': 'center' })
-                        a(href="https://artisansfiables.fr")
-                            span(style={ 'font-family': 'Saira' }) MEET A CELEBRITY
+                        a(href="http://localhost:3000")
+                            span MEET A CELEBRITY
             row
                 column
                     block head
@@ -39,7 +40,7 @@ heml
                             block content
                             hr
                             p.footer
-                                | Ceci est un mail automatique envoyé par
+                                | This automatic email has been sent by
                                 |
                                 a(href="mailto:no-reply@meetacelebrity.app") no-reply@meetacelebrity.app
                                 | .
